--- a/order-summary-component-main/order-summary-component-main/index.html
+++ b/order-summary-component-main/order-summary-component-main/index.html
@@ -11,28 +11,53 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Order summary card</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="header-img-container">
-      <img src="images/illustration-hero.svg" alt="An illustration of someone listening  and dancing to a music device">
+      <img
+        src="images/illustration-hero.svg"
+        alt="An illustration of someone listening  and dancing to a music device"
+      />
     </header>
+
     <main>
-      
-
-
+      <div class="information">
+        <div class="order">
+          <h2>Order Summary</h2>
+        </div>
+        <div class="listen">
+          <h3>
+            You can now listen to millions of<br />
+            songs, audiobooks, and podcasts on<br />
+            any device anywhere you like!
+          </h3>
+        </div>
+        <div class="contract">
+          <img src="images/icon-music.svg" alt="A picture of a music note" />
+          <div class="plan">
+            <h4 class="annual">Annual Plan</h4>
+            <h4>$59.99/year</h4>
+          </div>
+          <a href="#" title="Change your plan." target="_blank">Change</a>
+        </div>
+        <button type="button">Proceed to Payment</button>
+        <button type="button" class="cancel">Cancel Order</button>
+      </div>
     </main>
-    Order Summary You can now listen to millions of songs, audiobooks, and
-    podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-    Proceed to Payment Cancel Order
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </footer>
   </body>
 </html>
