--- a/order-summary-component-main/order-summary-component-main/index.html
+++ b/order-summary-component-main/order-summary-component-main/index.html
@@ -46,7 +46,7 @@
           </div>
           <a href="#" title="Change your plan." target="_blank">Change</a>
         </div>
-        <button type="button">Proceed to Payment</button>
+        <button type="button" class="proceed">Proceed to Payment</button>
         <button type="button" class="cancel">Cancel Order</button>
       </div>
     </main>
@@ -56,7 +56,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">John Gorman</a>.
       </div>
     </footer>
   </body>
