Added some content to the desktop card.

--- a/order-summary-component-main/order-summary-component-main/index2.html
+++ b/order-summary-component-main/order-summary-component-main/index2.html
@@ -24,7 +24,20 @@
         src="images/illustration-hero.svg"
         alt="Picture of someone dancing to listening to headphones"
       />
-      <div
+      <div class="order"><h1>Order Summary</h1></div>
+      <div class="listen">
+        <h4 class="line1">You can now listen to millions of songs</h4>
+        <h4 class="line2">audiobooks, and podcasts on any device</h4>
+        <h4 class="line3">anywhere you like!</h4>
+      </div>
+      <div class="contract">
+          <img src="images/icon-music.svg" alt="A picture of a music note" />
+          <div class="plan">
+            <h4 class="annual">Annual Plan</h4>
+            <h4>$59.99/year</h4>
+          </div>
+          <a href="#" title="Change your plan." target="_blank">Change</a>
+        </div>
     </div>
   </body>
 </html>
