--- a/index.html
+++ b/index.html
@@ -19,45 +19,47 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header-img-container">
-      <img
-        src="images/illustration-hero.svg"
-        alt="An illustration of someone listening  and dancing to a music device"
-      />
-    </header>
+    <card class="card">
+      <header class="header-img-container">
+        <img
+          src="images/illustration-hero.svg"
+          alt="An illustration of someone listening  and dancing to a music device"
+        />
+      </header>
 
-    <main>
-      <div class="information">
-        <div class="order">
-          <h2>Order Summary</h2>
-        </div>
-        <div class="listen">
-          <h3>
-            You can now listen to millions of<br />
-            songs, audiobooks, and podcasts on<br />
-            any device anywhere you like!
-          </h3>
-        </div>
-        <div class="contract">
-          <img src="images/icon-music.svg" alt="A picture of a music note" />
-          <div class="plan">
-            <h4 class="annual">Annual Plan</h4>
-            <h4>$59.99/year</h4>
+      <main>
+        <div class="information">
+          <div class="order">
+            <h2>Order Summary</h2>
           </div>
-          <a href="#" title="Change your plan." target="_blank">Change</a>
+          <div class="listen">
+            <h3>
+              You can now listen to millions of<br />
+              songs, audiobooks, and podcasts on<br />
+              any device anywhere you like!
+            </h3>
+          </div>
+          <div class="contract">
+            <img src="images/icon-music.svg" alt="A picture of a music note" />
+            <div class="plan">
+              <h4 class="annual">Annual Plan</h4>
+              <h4>$59.99/year</h4>
+            </div>
+            <a href="#" title="Change your plan." target="_blank">Change</a>
+          </div>
+          <button type="button" class="proceed">Proceed to Payment</button>
+          <button type="button" class="cancel">Cancel Order</button>
         </div>
-        <button type="button" class="proceed">Proceed to Payment</button>
-        <button type="button" class="cancel">Cancel Order</button>
-      </div>
-    </main>
+      </main>
 
-    <footer>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">John Gorman</a>.
-      </div>
-    </footer>
+      <footer>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">John Gorman</a>.
+        </div>
+      </footer>
+    </card>
   </body>
 </html>
